# portable-uwu

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: uwuify.rs
src/: alloc.rs  array.rs  lib.rs  main.rs  xorshift.rs
src/simd/: mod.rs  shift_elements_dyn.rs
src/transform/: bitap.rs  emoji.rs  mod.rs  nyaify.rs  str.rs  stutter.rs
testdata/: NOTICE  input.txt  output.txt
